/// An expense record as returned by `GET /api/expenses` / `POST /api/expenses`.
///
/// Both manual (`payroll_record_id` null) and system-generated payroll
/// expenses are returned in the same list. Expense records are immutable
/// after creation (FR-005).
class ExpenseRecord {
  const ExpenseRecord({
    required this.id,
    required this.amount,
    this.description,
    required this.recordedById,
    required this.recordedByName,
    required this.sectorId,
    required this.sectorName,
    this.payrollRecordId,
    required this.recordedAt,
    this.createdAt,
    this.updatedAt,
  });

  factory ExpenseRecord.fromJson(Map<String, dynamic> json) {
    final Map<String, dynamic> recordedBy =
        json['recorded_by'] as Map<String, dynamic>;
    final Map<String, dynamic> sector = json['sector'] as Map<String, dynamic>;

    return ExpenseRecord(
      id: json['id'] as int,
      amount: (json['amount'] as num).toDouble(),
      description: json['description'] as String?,
      recordedById: recordedBy['id'] as int,
      recordedByName: recordedBy['name'] as String,
      sectorId: sector['id'] as int,
      sectorName: sector['name'] as String,
      payrollRecordId: json['payroll_record_id'] as int?,
      recordedAt: DateTime.parse(json['recorded_at'] as String),
      createdAt: json['created_at'] != null
          ? DateTime.tryParse(json['created_at'] as String)
          : null,
      updatedAt: json['updated_at'] != null
          ? DateTime.tryParse(json['updated_at'] as String)
          : null,
    );
  }

  final int id;

  /// Transaction amount (positive decimal per the API spec).
  final double amount;

  /// Optional free-text description (nullable per the API spec).
  final String? description;

  final int recordedById;
  final String recordedByName;
  final int sectorId;
  final String sectorName;

  /// Null for manual entries; set when the expense was generated by a
  /// Payroll Record (system-generated, cannot be deleted).
  final int? payrollRecordId;

  /// Server-assigned timestamp (`recorded_at`).
  final DateTime recordedAt;

  /// Created / updated timestamps (may be null for legacy payloads).
  final DateTime? createdAt;
  final DateTime? updatedAt;
}
